@@ -321,7 +321,7 @@ The total amount of water in the soil interval")
                    (tag "NH4-Deposit")
                    (dimension "kg N/ha/&"))
            (number (path column "${column}" Surface IM NH4)
-                   (spec fixed Surface IM NH4)
+                   (spec fixed IM_soil NH4)
                    (tag "NH4-Surface")
                    (dimension "kg N/ha"))
            (number (path column "${column}" Surface IM_runoff NH4)
@@ -387,7 +387,7 @@ The total amount of water in the soil interval")
                    (tag "NO3-Deposit")
                    (dimension "kg N/ha/&"))
            (number (path column "${column}" Surface IM NO3)
-                   (spec fixed Surface IM NO3)
+                   (spec fixed IM_soil NO3)
                    (tag "NO3-Surface")
                    (dimension "kg N/ha"))
            (number (path column "${column}" Surface IM_runoff NO3)
@@ -464,7 +464,7 @@ The total amount of water in the soil interval")
                    (dimension "kg N/ha/&"))
            (number (tag "Org_N-Surface")
                    (path column "${column}" OrganicMatter "*" am "*" om "*" top_N)
-                   (spec am state om top_N)
+                   (spec fixed AOM top_N)
                    (dimension "kg N/ha"))
            (interval (tag "Org_N-Soil")
                      (path column "${column}" OrganicMatter "*" total_N)
